--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Erica.loader.js";
+      var loaderUrl = buildUrl + "/Erica2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Erica.data",
-        frameworkUrl: buildUrl + "/Erica.framework.js",
-        codeUrl: buildUrl + "/Erica.wasm",
+        dataUrl: buildUrl + "/Erica2.data",
+        frameworkUrl: buildUrl + "/Erica2.framework.js",
+        codeUrl: buildUrl + "/Erica2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
